src/y.output
Grammar

    0 $accept: lines $end

    1 lines: /* empty */
    2      | lines line SC

    3 line: bind
    4     | expr

    5 bind: ID expr

    6 expr: ID
    7     | expr LP expr RP


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 5 6
LP (259) 7
RP (260) 7
SC (261) 2


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
lines (8)
    on left: 1 2, on right: 0 2
line (9)
    on left: 3 4, on right: 2
bind (10)
    on left: 5, on right: 3
expr (11)
    on left: 6 7, on right: 4 5 7


state 0

    0 $accept: . lines $end

    $default  reduce using rule 1 (lines)

    lines  go to state 1


state 1

    0 $accept: lines . $end
    2 lines: lines . line SC

    $end  shift, and go to state 2
    ID    shift, and go to state 3

    line  go to state 4
    bind  go to state 5
    expr  go to state 6


state 2

    0 $accept: lines $end .

    $default  accept


state 3

    5 bind: ID . expr
    6 expr: ID .

    ID  shift, and go to state 7

    $default  reduce using rule 6 (expr)

    expr  go to state 8


state 4

    2 lines: lines line . SC

    SC  shift, and go to state 9


state 5

    3 line: bind .

    $default  reduce using rule 3 (line)


state 6

    4 line: expr .
    7 expr: expr . LP expr RP

    LP  shift, and go to state 10

    $default  reduce using rule 4 (line)


state 7

    6 expr: ID .

    $default  reduce using rule 6 (expr)


state 8

    5 bind: ID expr .
    7 expr: expr . LP expr RP

    LP  shift, and go to state 10

    $default  reduce using rule 5 (bind)


state 9

    2 lines: lines line SC .

    $default  reduce using rule 2 (lines)


state 10

    7 expr: expr LP . expr RP

    ID  shift, and go to state 7

    expr  go to state 11


state 11

    7 expr: expr . LP expr RP
    7     | expr LP expr . RP

    LP  shift, and go to state 10
    RP  shift, and go to state 12


state 12

    7 expr: expr LP expr RP .

    $default  reduce using rule 7 (expr)
